# sigmod26-PermART

./: .clang-format  .gitignore  CMakeLists.txt  README.md  artifact-01-point-operations.py  artifact-02-range-queries.py  artifact-03-insert-time-breakdown.py
common/: binding.h  random_fnv1a.h  random_xoshiro256p.h  random_xoshiro256pp.h  tree_stats.h
common/artifact_flock/: acquired_pool.h  epoch.h  flock.h  lock_types.h  no_tagged.h  pmem_alloc.h  spin_lock.h  tagged.h
common/artifact_parlay/: alloc.h  parallel.h  scheduler.h  thread_specific.h
common/artifact_parlay/internal/: block_allocator.h  thread_id_pool.h
common/artifact_parlay/internal/concurrency/: acquire_retire.h  hazptr_stack.h
common/artifact_verlib/: atomic_val.h  timestamps.h  verlib.h  versioned_hybrid.h  versioned_hybrid_ptr_level.h  versioned_indirect.h  versioned_recorded_once.h
common/nvm_tools/: durable_tools.h
common/papi/: papi_util_impl.h
common/recordmgr/: allocator_new.h  allocator_ralloc.h  blockbag.h  pool_none.h  pool_numa.h  pool_perthread_and_shared.h  reclaimer_debra.h  reclaimer_interface.h  reclaimer_token1.h  record_manager.h  record_manager_single_type.h
ds/: CMakeLists.txt
ds/04-artifact/: CMakeLists.txt  adapter.h  art.h  art_double_log_leaves.h  art_medium_leaves.h  art_singular_log_leaves.h  nodes.md
ds/07-fptree/: STATE.md  adapter.h  fptree.cpp  fptree.h
ds/08-dptree/: STATE.md  adapter.h
ds/08-dptree/include/: concur_dptree.hpp  dptree.hpp  util.h
ds/08-dptree/src/: util.cpp
ds/10-roart/: CMakeLists.txt  adapter.h  roart_wrapper.cpp
ds/10-roart/ART/: Tree.cpp
ds/10-roart/nvm_mgr/: Epoch.cpp  nvm_mgr.cpp  nvm_mgr.h  threadinfo.cpp  threadinfo.h
ds/11-lbtree/: CMakeLists.txt  STATE.md  adapter.h  example.cpp  lbtree.cc  lbtree.h  mempool.cc  mempool.h  nodepref.h  nvm-common.h  sample.cc  tree.h
ds/12-utree/: adapter.h  utree.h
ds/17-p-masstree/: CMakeLists.txt  Epoche.cpp  Epoche.h  STATE.md  adapter.h  masstree.cpp  masstree.h
ds/18-p-bwtree/: CMakeLists.txt  STATE.md  adapter.h
ds/18-p-bwtree/src/: bwtree.h
ds/20-p-hot/: CMakeLists.txt  STATE.md  adapter.h
ds/21-pactree-sosp/: CMakeLists.txt  adapter.h  example.cpp
ds/21-pactree-sosp/include/: common.h  numa-config.h  pactree.h  pmem.h  pptr.h
ds/21-pactree-sosp/lib/PDL-ART/: Epoche.cpp  N.cpp  Tree.cpp
ds/21-pactree-sosp/src/: Oplog.cpp  SearchLayer.h  WorkerThread.cpp  linkedList.cpp  linkedList.h  listNode.cpp  listNode.h  pactree.cpp  pactreeImpl.h
ds/22-bztree/: CMakeLists.txt  Original-CMakeLists.txt  README.md  STATE.md  adapter.h  bztree.cc  bztree.h  example.cpp
ds/23-fastfair/: CMakeLists.txt  adapter.h  btree-optim.h  btree.h
ds/24-abtree-pm-occ/: CMakeLists.txt  adapter.h  optik_btree.h
ds/25-abtree-pm-elim/: adapter.h  optik_btree.h
macrobench/storage/: row.cpp
microbench/: CMakeLists.txt  Makefile  compare_keygens.cpp  compile_command.sh  define_global_statistics.h  distrib_comparison.ipynb  fptree-example.cpp  keygen.h  main.cpp  p-art-example.cpp  parlay_generator.cpp  parlay_threading.cpp  parlay_threading_2.cpp  parlay_zipfian.cpp  setbench_zipfian.cpp  test.txt  zipfian.h
microbench/my_scripts/: 01-simple-run.sh
my_utils/: cmake_variations.py  constants.py  helpers.py  libraries.py  log_handlers.py  metrics.py  types.py  utils.py  variations.py
plotting-tools/: metadata.json  plot.py  plotbars.py  plotline.py  requirements.txt
plotting-tools/data_framework/: _plot_df.py  run_experiment.py
plotting-tools/plot_tools/: tools.py
tools/: plotbars.py  plotlines-old.py  plotlines.py
